examples/errors/velocity-config.js
module.exports = {
  root: './',
  template: './index.vm',
  context: './context.js'
}
